app/assets/stylesheets/computer/messages.scss
#message_body {
  border-radius: .625rem;
}

.callout.convo {
  border-radius: 0;
  border-bottom: 0;
  border-left: 0;
  border-top: 0;
  margin-bottom: 0;
  height: calc(100vh - 6.5rem);
  overflow-y: scroll;
  overflow-x: hidden;
  -ms-overflow-style: none; /* IE and Edge */
  scrollbar-width: none; /* Firefox */
}

.callout.msg {
  height: calc(100vh - 13.75rem);
  border-radius: 0;
  border: 0;
  margin-bottom: 0;
  overflow-y: scroll;
  overflow-x: hidden;
  -ms-overflow-style: none; /* IE and Edge */
  scrollbar-width: none; /* Firefox */
}

.callout.msg_header {
  border-radius: 0;
  margin-bottom: -.5rem;
  border-top: 0;
  border-left: 0;
  border-right: 0;
}

.msg_send {
  width: 100%;
  background-color: #ffe4c4;
  padding-bottom: .063rem;
}

.callout.msg.blank {
  height: calc(100vh - 6.45rem);
  border-radius: 0;
  border: 0;
  margin-bottom: 0;
  overflow-y: scroll;
  overflow-x: hidden;
  -ms-overflow-style: none; /* IE and Edge */
  scrollbar-width: none; /* Firefox */
}

.message-bar {
  margin-left: 1rem;
  margin-right: 1rem;
}

// Hide Scrolbar Chrome && Safari
.callout.msg::-webkit-scrollbar {
  display: none;
}

.callout.msg.blank::-webkit-scrollbar{
  display: none;
}

.callout.convo::-webkit-scrollbar{
  display: none;
}

